# SPSC_template

./: CMakeLists.txt  README.md
include/: analyzer.hpp  block_layout.hpp  camera_emulator.hpp  config.hpp  data_model.hpp  globals.hpp  locked_block_pool.hpp  logging.hpp  ring_queue.hpp  shared_sync.hpp
src/: analyzer.cpp  camera_emulator.cpp  globals.cpp  locked_block_pool.cpp  main.cpp
